[package]
name = "rustun"
version = "0.4.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A library for implementing STUN server and client asynchronously"
homepage = "https://github.com/sile/rustun"
repository = "https://github.com/sile/rustun"
readme = "README.md"
keywords = ["STUN", "asynchronous"]
categories = ["asynchronous", "network-programming"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/rustun"}

[dependencies]
bytecodec = "0.4"
factory = "0.1"
fibers = "0.1"
fibers_timeout_queue = "0.1"
fibers_transport = "0.1.3"
futures = "0.1"
rand = "0.8"
stun_codec = "0.2"
trackable = "1"

[dev-dependencies]
clap = { version = "3", features = ["derive"] }
fibers_global = "0.1"
